--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 
                                                             <div class="left scroll-animation"
                                                                 data-animation="fade_from_left">
-                                                                <h2>1.8+</h2>
+                                                                <h2>2.8+</h2>
                                                                 <p>Years of <br>Experience</p>
                                                             </div>
 
@@ -879,7 +879,7 @@
                                                             <div class="item scroll-animation"
                                                                 data-animation="fade_from_right">
                                                                 <span class="date">2021 - 2024</span>
-                                                                <h3>Bachelor Degree of Information Technology</h3>
+                                                                <h3>Bachelor of Computer Applications</h3>
                                                                 <p>Swarrnim Startup & Innovation University</p>
                                                             </div>
                                                         </div>
