email functionality done.

--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                 <div class="left-sidebar">
                     <div class="sidebar-header d-flex align-items-center justify-content-between">
                         <img width="90px" alt="Logo" src="./assets/image/logo.png" alt="Logo">
-                        <span class="designation">Framer Designer &amp; Developer</span>
+                        <span class="designation">Full stack developer &amp; Project manager</span>
                     </div>
                     <img class="me" src="./assets/image/my-photo-2.jpg" alt="ME">
                     <h3 class="email">rajvaghasiya466@gmail.com</h3>
