--- a/index.html
+++ b/index.html
@@ -855,17 +855,23 @@
                                                         <div class="resume-timeline">
                                                             <div class="item scroll-animation"
                                                                 data-animation="fade_from_right">
-                                                                <span class="date">04/2022 - 12/2024</span>
-                                                                <h3>Full stack developer</h3>
-                                                                <p>Ugam infotech</p>
-                                                                <h3>Project manager</h3>
-                                                                <p>Ugam infotech</p>
-                                                            </div>
-                                                            <div class="item scroll-animation"
-                                                                data-animation="fade_from_right">
                                                                 <span class="date">2024 - PRESENT</span>
                                                                 <h3>Master in computer science ( Data science ) </h3>
                                                                 <p>P. P. Savani University</p>
+                                                            </div>
+                                                            <div class="item scroll-animation"
+                                                                data-animation="fade_from_right">
+                                                                <span class="date">04/2025 - 07/2025</span>
+                                                                <h3>Full stack developer</h3>
+                                                                <p>Digitalks techno LLP</p>
+                                                            </div>
+                                                            <div class="item scroll-animation"
+                                                                data-animation="fade_from_right">
+                                                                <span class="date">04/2022 - 12/2024</span>
+                                                                <h3>Senior developer</h3>
+                                                                <p>Ugam infotech</p>
+                                                                <h3>Project manager</h3>
+                                                                <p>Ugam infotech</p>
                                                             </div>
                                                             <div class="item scroll-animation"
                                                                 data-animation="fade_from_right">
@@ -1137,6 +1143,18 @@
                                                                 <div class="skill">
                                                                     <div class="skill-inner">
                                                                         <img decoding="async"
+                                                                            src="./assets/image/advantage/python.png"
+                                                                            alt="">
+                                                                        <h2 class="percent">70%</h2>
+                                                                    </div>
+                                                                    <p class="name">Python</p>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-3 scroll-animation"
+                                                                data-animation="fade_from_right">
+                                                                <div class="skill">
+                                                                    <div class="skill-inner">
+                                                                        <img decoding="async"
                                                                             src="./assets/image/advantage/photoshop.png"
                                                                             alt="">
                                                                         <h2 class="percent">80%</h2>
@@ -1157,7 +1175,48 @@
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-3 scroll-animation"
-                                                                data-animation="fade_from_right">
+                                                                data-animation="fade_from_left">
+                                                                <div class="skill">
+                                                                    <div class="skill-inner">
+                                                                        <img decoding="async"
+                                                                            src="./assets/image/advantage/mongodb.png"
+                                                                            alt=""
+                                                                            width="70" height="70"
+                                                                            >
+                                                                        <h2 class="percent">96%</h2>
+                                                                    </div>
+                                                                    <p class="name">MongoDB</p>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-3 scroll-animation"
+                                                                data-animation="fade_from_left">
+                                                                <div class="skill">
+                                                                    <div class="skill-inner">
+                                                                        <img decoding="async"
+                                                                            src="./assets/image/advantage/mysql.png"
+                                                                            alt=""
+                                                                            width="70" height="70"
+                                                                            >
+                                                                        <h2 class="percent">85%</h2>
+                                                                    </div>
+                                                                    <p class="name">MySQL</p>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-3 scroll-animation"
+                                                                data-animation="fade_from_left">
+                                                                <div class="skill">
+                                                                    <div class="skill-inner">
+                                                                        <img decoding="async"
+                                                                            src="./assets/image/advantage/postgresql.png"
+                                                                            alt=""
+                                                                            width="70" height="70">
+                                                                        <h2 class="percent">70%</h2>
+                                                                    </div>
+                                                                    <p class="name">PostgreSQL</p>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-3 scroll-animation"
+                                                                data-animation="fade_from_left">
                                                                 <div class="skill">
                                                                     <div class="skill-inner">
                                                                         <img decoding="async"
