change on project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         href="https://wpriverthemes.com/drake/feed/" />
     <link rel="alternate" type="application/rss+xml" title="Raj &raquo; Comments Feed"
         href="https://wpriverthemes.com/drake/comments/feed/" />
-    <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script>
         window._wpemojiSettings = { "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/72x72\/", "ext": ".png", "svgUrl": "https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/svg\/", "svgExt": ".svg", "source": { "concatemoji": "https:\/\/wpriverthemes.com\/drake\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.6.2" } };
@@ -504,6 +503,7 @@
             animation: rotating 3s infinite linear;
         }
     </style>
+    <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
 
@@ -1180,9 +1180,7 @@
                                                                     <div class="skill-inner">
                                                                         <img decoding="async"
                                                                             src="./assets/image/advantage/mongodb.png"
-                                                                            alt=""
-                                                                            width="70" height="70"
-                                                                            >
+                                                                            alt="" width="70" height="70">
                                                                         <h2 class="percent">96%</h2>
                                                                     </div>
                                                                     <p class="name">MongoDB</p>
@@ -1194,9 +1192,7 @@
                                                                     <div class="skill-inner">
                                                                         <img decoding="async"
                                                                             src="./assets/image/advantage/mysql.png"
-                                                                            alt=""
-                                                                            width="70" height="70"
-                                                                            >
+                                                                            alt="" width="70" height="70">
                                                                         <h2 class="percent">85%</h2>
                                                                     </div>
                                                                     <p class="name">MySQL</p>
@@ -1208,8 +1204,7 @@
                                                                     <div class="skill-inner">
                                                                         <img decoding="async"
                                                                             src="./assets/image/advantage/postgresql.png"
-                                                                            alt=""
-                                                                            width="70" height="70">
+                                                                            alt="" width="70" height="70">
                                                                         <h2 class="percent">70%</h2>
                                                                     </div>
                                                                     <p class="name">PostgreSQL</p>
@@ -1279,6 +1274,78 @@
 
                                                         <div class="row portfolio-items">
 
+                                                            <div class="col-md-12 scroll-animation"
+                                                                data-animation="fade_from_bottom">
+                                                                <div class="portfolio-item portfolio-full">
+                                                                    <div class="portfolio-item-inner">
+                                                                        <a href="./assets/image/projects/crm.png"
+                                                                            data-lightbox="example-1">
+                                                                            <img class="laptopImage" decoding="async"
+                                                                                src="./assets/image/projects/crm.png"
+                                                                                alt="bloodline">
+                                                                            <img class="phoneImage" decoding="async"
+                                                                                src="./assets/image/projects/crm.png"
+                                                                                alt="bloodline">
+                                                                        </a>
+
+                                                                        <ul class="portfolio-categories">
+                                                                            <li>
+                                                                                <a>MUI</a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a>NextJS</a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a>TypeScript</a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a>NodeJS</a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a>MongoDB</a>
+                                                                            </li>
+                                                                        </ul>
+                                                                    </div>
+                                                                    <h3><a href="javascript:void(0)">Bloodline - Gaming
+                                                                            E-sport web</a></h3>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-12 scroll-animation"
+                                                                data-animation="fade_from_bottom">
+                                                                <div class="portfolio-item portfolio-full">
+                                                                    <div class="portfolio-item-inner">
+                                                                        <a href="./assets/image/projects/jk.png"
+                                                                            data-lightbox="example-1">
+                                                                            <img class="laptopImage" decoding="async"
+                                                                                src="./assets/image/projects/jk.png"
+                                                                                alt="bloodline">
+                                                                            <img class="phoneImage" decoding="async"
+                                                                                src="./assets/image/projects/jk.png"
+                                                                                alt="bloodline">
+                                                                        </a>
+
+                                                                        <ul class="portfolio-categories">
+                                                                            <li>
+                                                                                <a>MUI</a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a>ReactJS</a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a>Javascript</a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a>NodeJS</a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a>MongoDB</a>
+                                                                            </li>
+                                                                        </ul>
+                                                                    </div>
+                                                                    <h3><a href="javascript:void(0)">Bloodline - Gaming
+                                                                            E-sport web</a></h3>
+                                                                </div>
+                                                            </div>
                                                             <div class="col-md-12 scroll-animation"
                                                                 data-animation="fade_from_bottom">
                                                                 <div class="portfolio-item portfolio-full">
@@ -1381,10 +1448,13 @@
                                                                                 <a>HTML</a>
                                                                             </li>
                                                                             <li>
-                                                                                <a>React</a>
+                                                                                <a>ReactJS</a>
                                                                             </li>
                                                                             <li>
-                                                                                <a>Node</a>
+                                                                                <a>NodeJS</a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a>MongoDB</a>
                                                                             </li>
                                                                         </ul>
                                                                     </div>
@@ -1413,10 +1483,13 @@
                                                                                 <a>Bootstrap</a>
                                                                             </li>
                                                                             <li>
-                                                                                <a>React</a>
+                                                                                <a>ReactJS</a>
                                                                             </li>
                                                                             <li>
-                                                                                <a>Node</a>
+                                                                                <a>NodeJS</a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a>MySQL</a>
                                                                             </li>
                                                                         </ul>
                                                                     </div>
