change on project

--- a/index.html
+++ b/index.html
@@ -1306,8 +1306,7 @@
                                                                             </li>
                                                                         </ul>
                                                                     </div>
-                                                                    <h3><a href="javascript:void(0)">Bloodline - Gaming
-                                                                            E-sport web</a></h3>
+                                                                    <h3><a href="javascript:void(0)">SmartCRM – Customer Relationship Management System</a></h3>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-12 scroll-animation"
@@ -1342,8 +1341,7 @@
                                                                             </li>
                                                                         </ul>
                                                                     </div>
-                                                                    <h3><a href="javascript:void(0)">Bloodline - Gaming
-                                                                            E-sport web</a></h3>
+                                                                    <h3><a href="javascript:void(0)">Jay Khodiyar Fashion - Ecommerce</a></h3>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-12 scroll-animation"
