change on project

--- a/index.html
+++ b/index.html
@@ -1377,7 +1377,7 @@
                                                                         </ul>
                                                                     </div>
                                                                     <h3><a href="javascript:void(0)">Bloodline - Gaming
-                                                                            E-sport web</a></h3>
+                                                                            E-sport</a></h3>
                                                                 </div>
                                                             </div>
                                                             <!-- <div class="col-md-6 scroll-animation"
@@ -1457,7 +1457,7 @@
                                                                         </ul>
                                                                     </div>
                                                                     <h3><a target="_blank" href="#">Paradise - Hotel
-                                                                            room booking web</a></h3>
+                                                                            room booking</a></h3>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-12 scroll-animation"
@@ -1492,7 +1492,7 @@
                                                                         </ul>
                                                                     </div>
                                                                     <h3><a target="_blank" href="#">TheCappa - Hotel
-                                                                            room booking web</a></h3>
+                                                                            room booking</a></h3>
                                                                 </div>
                                                             </div>
                                                         </div>
